# plover-no-gui-dict-manager

./: README.md  setup.cfg
plover_gtm/: __init__.py  chord_processor.py  last_word_tracker.py  plover_gtm_plugin.py  plugin.py
plover_gtm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
