[metadata]
name = plover-gtm
keywords = plover plover_plugin gtm text_menu
author = Ryan Mulligan

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
packages =
  plover_gtm

[options.entry_points]
plover.extension =
  gtm = plover_gtm:setup

plover.macro =
  lookup_chord = plover_gtm.chord_processor:inline_lookup_chord
