[metadata]
name = plover-gtm
keywords = plover plover_plugin gtm text_menu
author = Ryan Mulligan

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
packages =
  plover_gtm

[options.entry_points]
plover.macro =
  capture_start = plover_gtm.chord_processor:start_capture
  capture_end = plover_gtm.chord_processor:end_capture
  capture_abort = plover_gtm.chord_processor:abort_capture
  capture_word = plover_gtm.chord_processor:capture_word

plover.extension =
  gtm = plover_gtm:setup
